workshop01/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myapp-route
  namespace: workshop01
spec:
  parentRefs:
    - name: aalwg-gw
      namespace: aalwg
      port: 80

  hostnames:
    - "app.172.25.39.200.nip.io"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: myapp
          port: 80
